// Bun Snapshot v1, https://bun.sh/docs/test/snapshots

exports[`books authors transform to editors/translators has author and translator 1`] = `
{
  "asin": "B0DXRD5C4F",
  "content_delivery_type": "SinglePartBook",
  "contributors": [
    {
      "asin": undefined,
      "name": "Boris Smirnov",
      "role": "translator",
    },
    {
      "asin": "B0DJPQVTNL",
      "name": "Michael Borz",
      "role": "author",
    },
    {
      "asin": undefined,
      "name": "Spencer Dillehay",
      "role": "narrator",
    },
  ],
  "copyright": "©2025 Michael Borz; English translation copyright 2025 by Boris Smirnov (P)2025 Tantor Media",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/51wEoTEWCZL._SL500_.jpg",
  },
  "publisher_name": "Tantor Media",
  "publisher_summary_md": 
"In my past life, I heeded the Blood Code: I rescued people, slaying monsters from the inner plane. For my trouble the Inquisition condemned me for blood lust and burned me at the stake.

And in my current life my family is dishonored in the eyes of the emperor, there's a bounty on my head, and I'm the subject of a divine dispute. Well then, no better time than now to surprise them all. Give me but a drop of blood—and the hunter will become the prey.

I am Mikhail Komarin. The Blood of my bloodline guards my back! And I still heed the Code."
,
  "relationships": [
    {
      "asin": "B0DXVW9PX4",
      "content_delivery_type": "BookSeries",
      "relationship_to_product": "parent",
      "relationship_type": "series",
      "sequence": "1",
      "sort": 1,
      "title": "Blood Code",
    },
  ],
  "series": [
    {
      "asin": "B0DXVW9PX4",
      "title": "Blood Code",
    },
  ],
  "subtitle": undefined,
  "title": "The Blood Code #1",
}
`;

exports[`books authors transform to editors/translators has author and translators 1`] = `
{
  "asin": "197734447X",
  "content_delivery_type": "MultiPartBook",
  "contributors": [
    {
      "asin": "B001IGO52Y",
      "name": "Giorgio Vasari",
      "role": "author",
    },
    {
      "asin": undefined,
      "name": "James Cameron Stewart",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Julia Conway Bondanella",
      "role": "translator",
    },
    {
      "asin": undefined,
      "name": "Peter Bondanella",
      "role": "translator",
    },
  ],
  "copyright": "©1991 Julia Conaway Bondanella and Peter Bondanella (translation and editorial material) (P)2019 Tantor",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/51k6TN3Jv5L._SL500_.jpg",
  },
  "publisher_name": "Tantor Audio",
  "publisher_summary_md": 
"These biographies of the great quattrocento artists have long been considered among the most important of contemporary sources on Italian Renaissance art. Vasari, who invented the term "Renaissance", was the first to outline the influential theory of Renaissance art that traces a progression through Giotto, Brunelleschi, and finally the titanic figures of Michaelangelo, Da Vinci, and Raphael.

This new translation, specially commissioned for the Oxford World's Classics series, contains 36 of the most important lives. _Lives of the Artists_ is an invaluable classic to add to your collection."
,
  "relationships": [
    {
      "asin": "B07RN2F389",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 1,
    },
    {
      "asin": "B07RMZN6CH",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 2,
    },
  ],
  "series": undefined,
  "subtitle": undefined,
  "title": "The Lives of the Artists",
}
`;

exports[`books authors transform to editors/translators has authors and translator 1`] = `
{
  "asin": "B0F257T6XN",
  "content_delivery_type": "SinglePartBook",
  "contributors": [
    {
      "asin": "B0CBG84X29",
      "name": "Alex Toxic",
      "role": "author",
    },
    {
      "asin": undefined,
      "name": "Christopher P. Brown",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Dan Veksler",
      "role": "translator",
    },
    {
      "asin": "B0D5F9KTKM",
      "name": "Nadya Lee",
      "role": "author",
    },
  ],
  "copyright": "©2025 Alex Toxic, Nadya Lee; English translation copyright 2025 by Dan Veksler (P)2025 Tantor Media",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/51b6Q8yaWTL._SL500_.jpg",
  },
  "publisher_name": "Tantor Media",
  "publisher_summary_md": 
"After finding an abandoned, ancient fortress inside a focus, the Richters turn it into their headquarters and a training camp for their new army.

It's becoming harder and harder to conceal the truth. A big war is right around the corner."
,
  "relationships": [
    {
      "asin": "B0DNPRWSQY",
      "content_delivery_type": "BookSeries",
      "relationship_to_product": "parent",
      "relationship_type": "series",
      "sequence": "6",
      "sort": 6,
      "title": "Dark Healer",
    },
  ],
  "series": [
    {
      "asin": "B0DNPRWSQY",
      "title": "Dark Healer",
    },
  ],
  "subtitle": undefined,
  "title": "The Dark Healer: Book 6",
}
`;

exports[`books authors transform to editors/translators has author and editor 1`] = `
{
  "asin": "1400170052",
  "content_delivery_type": "MultiPartBook",
  "contributors": [
    {
      "asin": "B000AQ6W60",
      "name": "F. A. Hayek",
      "role": "author",
    },
    {
      "asin": undefined,
      "name": "Mike Chamberlain",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Ronald Hamowy",
      "role": "editor",
    },
  ],
  "copyright": "©1960, 2011 the University of Chicago (P)2019 Tantor",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/51i4AWTv84L._SL500_.jpg",
  },
  "publisher_name": "Tantor Audio",
  "publisher_summary_md": 
"From the $700 billion bailout of the banking industry to president Barack Obama's $787 billion stimulus package to the highly controversial passage of federal health-care reform, conservatives and concerned citizens alike have grown increasingly fearful of big government.

_The Constitution of Liberty_ is considered Hayek's classic statement on the ideals of freedom and liberty, ideals that he believes have guided - and must continue to guide - the growth of Western civilization. Here, Hayek defends the principles of a free society, casting a skeptical eye on the growth of the welfare state and examining the challenges to freedom posed by an ever-expanding government - as well as its corrosive effect on the creation, preservation, and utilization of knowledge. In opposition to those who call for the state to play a greater role in society, Hayek puts forward a nuanced argument for prudence. Guided by this quality, he elegantly demonstrates that a free market system in a democratic polity - under the rule of law and with strong constitutional protections of individual rights - represents the best chance for the continuing existence of liberty."
,
  "relationships": [
    {
      "asin": "B07VXM4JP6",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 1,
    },
    {
      "asin": "B07VZTRPQJ",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 2,
    },
  ],
  "series": undefined,
  "subtitle": "The Definitive Edition",
  "title": "The Constitution of Liberty",
}
`;

exports[`books authors transform to editors/translators has author and non-conformant editor 1`] = `
{
  "asin": "B004HGZW06",
  "content_delivery_type": "MultiPartBook",
  "contributors": [
    {
      "asin": undefined,
      "name": "Edited by Charles Neider",
      "role": "editor",
    },
    {
      "asin": "B000APWHJ2",
      "name": "Mark Twain",
      "role": "author",
    },
    {
      "asin": undefined,
      "name": "Michael Anthony",
      "role": "narrator",
    },
  ],
  "copyright": "©1959 Charles Neider (P)1995 Blackstone Audio, Inc.",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/4122jPjRepL._SL500_.jpg",
  },
  "publisher_name": "Blackstone Audio, Inc.",
  "publisher_summary_md": 
"Mark Twain’s daughter Susy wrote: “Papa…doesn’t like to go to church at all, why I never understood, until just now, he told us the other day that he couldn’t bear to hear any one talk but himself, but that he could listen to himself talk for hours without getting tired, of course he said this in joke, but I’ve no dought \\[sic\\] it was founded on truth."

Here is one of the great autobiographies of the English language - exuberant, wonderfully contemporary in spirit, by a man twice as large as life who—he said so himself—had no trouble remembering everything that had ever happened to him and a lot of things besides.

Nothing ever happened to Mark Twain in a small way. His adventures were invariably fraught with drama. Success and failure for him were equally spectacular. And so he roared down the years, feuding with publishers, being a sucker for inventors, always learning wisdom at the point of ruin, and always relishing the absurd spectacle of humankind, which he regarded with a blend of vitriol and affection."
,
  "relationships": [
    {
      "asin": "B004HGSTC4",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 1,
    },
    {
      "asin": "B004HGSTDS",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 2,
    },
    {
      "asin": "B004HGXU4Q",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 3,
    },
  ],
  "series": undefined,
  "subtitle": undefined,
  "title": "The Autobiography of Mark Twain",
}
`;

exports[`books authors transform to editors/translators has editors and narrators only (no authors) 1`] = `
{
  "asin": "B0DVLXQ8QM",
  "content_delivery_type": "MultiPartBook",
  "contributors": [
    {
      "asin": undefined,
      "name": "Daniel Balderston",
      "role": "editor",
    },
    {
      "asin": undefined,
      "name": "Emmanuel Chumaceiro",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Nora Benedict",
      "role": "editor",
    },
    {
      "asin": undefined,
      "name": "Oxford Handbooks",
      "role": "editor",
    },
  ],
  "copyright": "©2024 Oxford University Press (P)2025 Highbridge Audio",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/41i6T6WW4rL._SL500_.jpg",
  },
  "publisher_name": "Highbridge Audio",
  "publisher_summary_md": 
"Most known for his creative fictions that tackle literary questions of authorship as well as more philosophical notions such as multiverse theory, Argentine author Jorge Luis Borges (1899-1986) has captivated scholars from a variety of disciplines since his emergence on the international scene. However, much of the scholarship surrounding Borges does not focus on the reception of Borges's works in the fields of philosophy, the visual arts, film, political science, media theory, mathematics, and law, nor does it consider how his affiliations and interests changed over the course of his long life.  
  
In _The Oxford Handbook of Jorge Luis Borges_, editors Daniel Balderston and Nora Benedict, along with a team of international scholars, contextualize Jorge Luis Borges's work for a new generation of twenty-first-century listeners and critics. This volume shifts the emphasis to Borges's working life, his writing processes, his collaborations and networks, and the political and cultural background of his production. The Handbook also evaluates his impact on a variety of other fields ranging from political science and philosophy to media studies and mathematics. The volume highlights current debates among Borges scholars, reevaluating how the physical forms and socio-political contexts of Borges's writings both shaped and determined specific readerships around the world."
,
  "relationships": [
    {
      "asin": "B0FK5VTCQF",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 1,
    },
    {
      "asin": "B0FK5VPT1Q",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 2,
    },
    {
      "asin": "B0FK5V1R1Z",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 3,
    },
  ],
  "series": undefined,
  "subtitle": undefined,
  "title": "The Oxford Handbook of Jorge Luis Borges",
}
`;

exports[`books authors transform to editors/translators has editors, foreword by, and narrators only (no authors) 1`] = `
{
  "asin": "B0DV17RHSW",
  "content_delivery_type": "SinglePartBook",
  "contributors": [
    {
      "asin": undefined,
      "name": "Gareth Richards",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Peter J. Carroll",
      "role": "editor",
    },
    {
      "asin": undefined,
      "name": "Ronald Hutton",
      "role": "foreword",
    },
  ],
  "copyright": "©2025 Peter J. Carroll; Foreword by Ronald Hutton copyright 2025 by Red Wheel/Weiser, LLC (P)2025 Tantor Media",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/51m4JZEWN-L._SL500_.jpg",
  },
  "publisher_name": "Tantor Media",
  "publisher_summary_md": 
"**_This Is Chaos_** **is the first collection of its kind showcasing where chaos magic has come from, where it is now, and where it is going. Helmed by one of the originators of chaos magic, Peter Carroll, and filled with essays by some of the most respected chaos magic workers who are redefining magic.**  
  
Chaos magic emerged only a few decades back, but it has already grown into a magical tradition embraced by many. Chaos magic started under the influence of renowned artist and occultist Austin Osman Spare; it was then codified by Peter J. Carroll and a few others. _This Is Chaos_ delves into the history the magical system has come from, but more importantly looks at its use and what the future holds. Chaos magic has always been about pushing boundaries with a focus on belief utilizing aspects of magic.  
  
Featuring a foreword by Ronald Hutton and essays from chaos magic practitioners, including Aidan Wachter, Carl Abrahamsson, Dave Lee, Ivy Corvus, Jaq D. Hawkins, Jozef Karika, Jacob Sipes, Julian Vayne, Lionel Snell, Mariana Pinzón, Sinobu Kurono, and Sanhre Daffowt.  
  
_This Is Chaos_ is a collection unlike any before, showcasing the many ways chaos magic is finding its way into other modes of magic."
,
  "relationships": undefined,
  "series": undefined,
  "subtitle": "Embracing the Future of Magic",
  "title": "This Is Chaos",
}
`;

exports[`books authors transform to editors/translators has no narrators and no product_images 1`] = `
{
  "asin": "B0FLYHTBS3",
  "content_delivery_type": "SinglePartBook",
  "contributors": [
    {
      "asin": undefined,
      "name": "Anna Thomasson",
      "role": "author",
    },
  ],
  "copyright": "©2026 Anna Thomasson (P)2026 Macmillan Publishers International Limited",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": undefined,
  "publisher_name": "Picador",
  "publisher_summary_md": 
"**Late summer 1937. Europe is inching towards war. In the South of France a group of friends picnic in a secluded clearing. The women have peeled down their dresses to their waists. A couple kiss playfully while the others look on, laughing. The moment is captured in a now-iconic image by photographer Lee Miller.**

Some of the friends are well known, others less so: the dancer Ady Fidelin, the poet Paul Éluard and his wife Nusch, the Surrealists Man Ray and Roland Penrose. They are spending the summer with fellow artists Dora Maar, Eileen Agar and Pablo Picasso.

In _A Vast Horizon_, biographer Anna Thomasson tells the story of their creativity, friendships and pursuit of freedom set against the tense political backdrop of the 1930s, the Second World War and its aftermath. Tracing their lives through their photographs, artworks, poems and letters, from the heady weeks of creativity, sex and collaboration of that Mediterranean summer through the tumultuous years that followed, it is the story of rebellious lives and the redemptive power of art."
,
  "relationships": undefined,
  "series": undefined,
  "subtitle": "Artists and Lovers, Freedom and War",
  "title": "A Vast Horizon",
}
`;

exports[`books books part of a bundle parse correctly and narrator has ASIN 1`] = `
{
  "asin": "B002UUKHII",
  "content_delivery_type": "SinglePartBook",
  "contributors": [
    {
      "asin": "B0C9M9M74R",
      "name": "Jeff David",
      "role": "narrator",
    },
    {
      "asin": "B001IGV3IS",
      "name": "Robert Greene",
      "role": "author",
    },
  ],
  "copyright": "©2001 Robert Greene and Joost Elfers (P)2001 HighBridge Company",
  "format_type": "abridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/41pjoMsqWUL._SL500_.jpg",
  },
  "publisher_name": "HighBridge, a division of Recorded Books",
  "publisher_summary_md": "When raised to the level of art, seduction, an indirect and subtle form of power, has toppled empires, won elections, and enslaved great minds. _The Art of Seduction_ synthesizes the legacies of civilization's greatest seducers - from Cleopatra to JFK - with the philosophies of important intellectuals on the subject, including everyone from Freud to Kierkegaard and Ovid to Casanova, and the classic literature of seduction. Robert Greene identifies the rules of a timeless, amoral game and explores how to cast a spell, break down resistance, and, ultimately, compel a target to surrender. _The Art of Seduction_ is an indispensable primer on the essence of one of history's greatest weapons and the ultimate form of power.",
  "relationships": [
    {
      "asin": "B002VETW5C",
      "content_delivery_type": "Bundle",
      "relationship_to_product": "parent",
      "relationship_type": "component",
      "sort": 1,
      "title": "The Art of Seduction",
    },
    {
      "asin": "B0038BYYD2",
      "content_delivery_type": "Bundle",
      "relationship_to_product": "parent",
      "relationship_type": "component",
      "sort": 1,
      "title": "The Art of Seduction + Audible Fast Company, Free 1-Month Subscription",
    },
  ],
  "series": undefined,
  "subtitle": "An Indispensible Primer on the Ultimate Form of Power",
  "title": "The Art of Seduction",
}
`;

exports[`books abridged books parse correctly and translator has ASIN 1`] = `
{
  "asin": "B002V8KQUI",
  "content_delivery_type": "MultiPartBook",
  "contributors": [
    {
      "asin": "B000APTDDU",
      "name": "Constance Garnett",
      "role": "translator",
    },
    {
      "asin": "B000APYSC6",
      "name": "Fyodor Dostoevsky",
      "role": "author",
    },
    {
      "asin": undefined,
      "name": "Simon Vance",
      "role": "narrator",
    },
  ],
  "copyright": "Public Domain (P)2005 Mission Audio",
  "format_type": "abridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/61k+uH49+2L._SL500_.jpg",
  },
  "publisher_name": "Mission Audio",
  "publisher_summary_md": 
"_The Brothers Karamazov_ is Dostoevsky's crowning life work and stands among the best novels in world literature.

The book probes the possible roles of four brothers in the unresolved murder of their father, Fyodor Karamazov. At the same time, it carefully explores the personalities and inclinations of the brothers themselves. Their psyches together represent the full spectrum of human nature, the continuum of faith and doubt.

Ultimately, this novel seeks to understand the real meaning of faith and existence and includes much beneficial philosophical and spiritual discussion that moves the reader towards faith. An incredibly enjoyable and edifying story!"
,
  "relationships": [
    {
      "asin": "B002V8KQZ8",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 1,
    },
    {
      "asin": "B002V8KR4I",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 2,
    },
    {
      "asin": "B002V8H3A4",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 3,
    },
  ],
  "series": undefined,
  "subtitle": undefined,
  "title": "Brothers Karamazov",
}
`;

exports[`books adult books parse correctly 1`] = `
{
  "asin": "B0FDH3GFZW",
  "content_delivery_type": "MultiPartBook",
  "contributors": [
    {
      "asin": undefined,
      "name": "Edward Black",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "J. Tipstone",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Joe Arden",
      "role": "narrator",
    },
    {
      "asin": "B01I9YU2JM",
      "name": "K.G. Reuss",
      "role": "author",
    },
    {
      "asin": undefined,
      "name": "Michael Gallagher",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Sean Masters",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Stella Ripley",
      "role": "narrator",
    },
  ],
  "copyright": "©2022 K.G. Reuss (P)2025 Blue Nose Publishing",
  "format_type": "unabridged",
  "is_adult_product": true,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/51FQYNa14mL._SL500_.jpg",
  },
  "publisher_name": "Blue Nose Publishing",
  "publisher_summary_md": 
"The last time I spoke was eight years ago when my best friend tried to kill me. I never dreamed my silence would break with a scream. Being sent to Chapel Crest after my new stepfather deemed me a heathen seemed like a blessing compared to staying with him and my mom. I was a mute demon in his eyes, and when the rod didn’t beat the evil out of me, he prayed Chapel Crest could.

I envisioned the religious academy would become my sanctuary. I was wrong. So very wrong. Chapel Crest was an asylum moonlighting as a religious school. It's where the meds take out the demons in your head or the punishments from the staff will.

If this place and its rules didn’t break me, Dante Church and his cult of bullies would.

They called themselves the Watchers. They were dark and ruthless—everything a girl like me should avoid. But maybe something was wrong with me because the thought of being on my knees for the four devils appeals to me.

Even if it meant I was praying for survival.

Going to Church took on a whole new meaning at Chapel Crest.

Church is book one of The Boys of Chapel Crest. It’s a dark bully romance with four guys chasing one girl. There is no choosing. Only begging. And lots of praying. Please listen to the foreword."
,
  "relationships": [
    {
      "asin": "B0F9WCJHYL",
      "content_delivery_type": "BookSeries",
      "relationship_to_product": "parent",
      "relationship_type": "series",
      "sequence": "1",
      "sort": 1,
      "title": "The Boys of Chapel Crest",
    },
    {
      "asin": "B0FDH5WBG6",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 1,
    },
    {
      "asin": "B0FDH6JGCH",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 2,
    },
  ],
  "series": [
    {
      "asin": "B0F9WCJHYL",
      "title": "The Boys of Chapel Crest",
    },
  ],
  "subtitle": "A Dark Asylum Bully Romance (The Boys of Chapel Crest, Book 1)",
  "title": "Church",
}
`;

exports[`books summary is in markdown format 1`] = `
{
  "asin": "1774241307",
  "content_delivery_type": "MultiPartBook",
  "contributors": [
    {
      "asin": undefined,
      "name": "Travis Baldree",
      "role": "narrator",
    },
    {
      "asin": "B01CXXPTTI",
      "name": "TurtleMe",
      "role": "author",
    },
  ],
  "copyright": "©2016 TurtleMe (P)2019 Podium Publishing",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/518ZH-6fZBL._SL500_.jpg",
  },
  "publisher_name": "Podium Audio",
  "publisher_summary_md": 
"_The Beginning After the End: Publisher's Pack_ contains books 1 and 2 of The Beginning After the End series.

_Early Years_, book one:

I never believed in the whole “light at the end of the tunnel” folly where people, after having a near-death experience, would startle awake in a cold sweat exclaiming, “I saw the light!” But there I was, in this so-called “tunnel” facing a glaring light, when the last thing I remembered was sleeping in my room - the royal bed-chamber, as others called it. Had I died? If so, how?

King Grey once benefited from unrivaled strength, wealth, and prestige in a world governed by martial ability but now finds himself reborn in a society dominated by magic. Given a second chance at life, the once-king strives to understand his role in this new world and the purpose of his reincarnation while correcting the mistakes of his past.

_New Heights_, book two:

I had a family now, I had people who loved me. It was a feeling I never wanted to give up. I’d treasure it, fight for it if I had to...and for that, I needed to better myself. More so even than when I had been a king.

Given a second chance at life, Arthur Leywin wishes above all to grow strong enough to protect his family, as the memory of his cold and disconnected past life as King Grey still haunts him. To this end, Arthur adopts the persona of the masked adventurer, Note, and delves into the dungeons under the forbidding Beast Glades. On his adventures, Arthur discovers a strange magical blade that responds to the dragon’s will inside him, befriends a powerful young conjurer whose past is shrouded in mystery, and battles the deadly Elderwood Guardian. Yet all his efforts might prove for naught when Arthur makes an enemy of a talented conjurer from a very powerful family, putting his very future at risk."
,
  "relationships": [
    {
      "asin": "B081W9KM7J",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 1,
    },
    {
      "asin": "B085CDYDYS",
      "content_delivery_type": "BookSeries",
      "relationship_to_product": "parent",
      "relationship_type": "series",
      "sequence": "1-2",
      "sort": 1,
      "title": "The Beginning After the End",
    },
    {
      "asin": "B081VY12MQ",
      "relationship_to_product": "child",
      "relationship_type": "component",
      "sort": 2,
    },
  ],
  "series": [
    {
      "asin": "B085CDYDYS",
      "title": "The Beginning After the End",
    },
  ],
  "subtitle": undefined,
  "title": "The Beginning After the End: Publisher's Pack",
}
`;

exports[`series summary is in markdown format 1`] = `
{
  "asin": "B085CDYDYS",
  "authors": [
    {
      "name": "TurtleMe",
    },
  ],
  "content_delivery_type": "BookSeries",
  "publisher_summary_md": 
"**Stripped of his power and thrown into the distant future, King Grey is certainly no longer in his previous life. How will he regain control in an unknown time and place where magical abilities rule?**

Once a powerful ruler, King Grey is now reborn as a baby, and must relearn how to navigate society in a whole new time, place, and body. Adapted from the beloved manga series, The Beginning After the End follows the main character through his journey of self-discovery as he attempts to conquer the new reality he has awoken in and find his way in a strange place and time full of magic and wonder.

Author TurtleMe tells a powerful story of a king given a second chance at life. The Beginning After the End is packed with time travel and adventure, but also focuses on personal growth and explores what it means to be able to start over. The six books in the series follow the character development of King Grey after he is reincarnated as Arthur Leywin, a man whose life is a far cry from the royalty and power he once knew. Now, as Arthur, King Grey struggles to make the most of his fresh start in life and understand his place and purpose in this mystical world.

Each audiobook in the series is narrated by Travis Baldree, an established narrator of close to 175 titles. Baldree brings the perfect level of enthusiasm and emphasis to this wild fantastic story, while maintaining a clear and crisp tone. His consistency over the entire series helps bring the story together for a singular must-listen."
,
  "relationships": [
    {
      "asin": "1774241307",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "1-2",
      "sort": 1,
    },
    {
      "asin": "1774242036",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "3-4",
      "sort": 2,
    },
    {
      "asin": "B087GF3J9W",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "1",
      "sort": 3,
    },
    {
      "asin": "B0DH64NC7D",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "1",
      "sort": 3,
    },
    {
      "asin": "B087GJNX7P",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "2",
      "sort": 4,
    },
    {
      "asin": "B0DH5RK8QK",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "2",
      "sort": 4,
    },
    {
      "asin": "B087GH7K9P",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "3",
      "sort": 5,
    },
    {
      "asin": "B0DH5BRVW3",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "3",
      "sort": 5,
    },
    {
      "asin": "B087GS2BKT",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "4",
      "sort": 6,
    },
    {
      "asin": "B0DH5B625C",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "4",
      "sort": 6,
    },
    {
      "asin": "177424201X",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "5",
      "sort": 7,
    },
    {
      "asin": "1774242028",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "6",
      "sort": 8,
    },
    {
      "asin": "1774244128",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "7",
      "sort": 9,
    },
    {
      "asin": "1774248891",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "8",
      "sort": 10,
    },
    {
      "asin": "B09X6115SW",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "8.5",
      "sort": 11,
    },
    {
      "asin": "B0B3C22MQS",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "9",
      "sort": 12,
    },
    {
      "asin": "B0CCSW7C89",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "10",
      "sort": 13,
    },
    {
      "asin": "B0DH83CGBT",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "11",
      "sort": 14,
    },
    {
      "asin": "B0DJPYFJ2K",
      "relationship_to_product": "child",
      "relationship_type": "series",
      "sequence": "11",
      "sort": 14,
    },
  ],
  "title": "The Beginning After the End",
}
`;

exports[`books author without ASIN 1`] = `
{
  "asin": "B0DT29BJGC",
  "content_delivery_type": "SinglePartBook",
  "contributors": [
    {
      "asin": undefined,
      "name": "Peter Kenny",
      "role": "narrator",
    },
    {
      "asin": undefined,
      "name": "Ryan English",
      "role": "author",
    },
  ],
  "copyright": "©2025 Ryan English (P)2025 Podium Audio",
  "format_type": "unabridged",
  "is_adult_product": false,
  "product_images": {
    "500": "https://m.media-amazon.com/images/I/51DOmt0o-8L._SL500_.jpg",
  },
  "publisher_name": "Podium Audio",
  "publisher_summary_md": 
"**In a world of wonder, mystery, and lurking threats, a young boy and a giant wolf must rely on each other to escape the things that hunt them both.**

The age of mankind is over, its empire reduced to a land of rubble and broken roads. Vicious things nest in the old, forgotten ruins, and what's left of humanity huddles in tiny communities that grow smaller every generation. But when a young boy is taken in by an unlikely ally, a glimmer of hope is born.

After waking up in a mysterious forest with no weapons, supplies, or even memories of his life before, Dirt should have ended up a barely adequate snack. Luckily, he attracts the attention of a gigantic, curious wolf pup, who rescues him, and they quickly become friends.

The world is beautiful and wondrous, perfect for a pair of adventurous youngsters, but that doesn't mean it's safe. Dirt is small and frail, and the mighty Socks has problems of his own. His Mother, an immense being of unfathomable power, sets a high bar for her offspring. If Socks can't meet the challenge, he'll die. Mother's not too fond of the clingy little human he insists on keeping either.

If the two of them are to survive long enough to grow up, they'll need all of Dirt's sincerity, discipline, and cunning as well as Socks's valor and tremendous strength. And they'll also need to beware: not everything that was lost should be rediscovered, and not everything that sleeps should be disturbed.

**The first volume of the hit fantasy adventure series—with more than a million views on Royal Road—now available in paperback, ebook, and audiobook!**"
,
  "relationships": [
    {
      "asin": "B0DT7GY283",
      "content_delivery_type": "BookSeries",
      "relationship_to_product": "parent",
      "relationship_type": "series",
      "sequence": "1",
      "sort": 1,
      "title": "The Land of Broken Roads",
    },
  ],
  "series": [
    {
      "asin": "B0DT7GY283",
      "title": "The Land of Broken Roads",
    },
  ],
  "subtitle": "The Land of Broken Roads, Book 1",
  "title": "Ancient Things: A High Fantasy Adventure",
}
`;
